# config/routes.rb
@@ -2,12 +2,11 @@ Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
 
-  post 'api/v1/auth/login', to: 'api/authentication#login'
-
-  match '*unmatched_route', to: 'application#route_not_found', via: :all
+  devise_for :users
 
   namespace :api, defaults: { format: :json } do
     namespace :v1 do
+      post '/auth/login', to: 'authentication#login'
       root to: 'words#index'
       resources :words, except: :index do
         collection do
