# db/schema.rb
@@ -25,8 +25,9 @@ ActiveRecord::Schema[7.0].define(version: 2023_12_01_172617) do
   end
 
   create_table "users", force: :cascade do |t|
-    t.string "name", null: false
+    t.string "username", null: false
     t.string "email", default: "", null: false
+    t.boolean "admin", default: false
     t.string "encrypted_password", default: "", null: false
     t.string "reset_password_token"
     t.datetime "reset_password_sent_at"
@@ -34,8 +35,8 @@ ActiveRecord::Schema[7.0].define(version: 2023_12_01_172617) do
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
     t.index ["email"], name: "index_users_on_email", unique: true
-    t.index ["name"], name: "index_users_on_name", unique: true
     t.index ["reset_password_token"], name: "index_users_on_reset_password_token", unique: true
+    t.index ["username"], name: "index_users_on_username", unique: true
   end
 
   create_table "words", force: :cascade do |t|
